[project]
name = "dtPyAppFramework"
description = "A Python library for common features in application development."
keywords = ["framework", "logging", "secrets", "settings"]
requires-python = ">=3.9"
license = { file = "src/dtPyAppFramework/_licence.txt" }
readme  = "README.md"
authors = [
    {name = "Digital-Thought", email = "dev@digital-thought.org"},
]
maintainers = [
    {name = "Digital-Thought", email = "dev@digital-thought.org"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://github.com/Digital-Thought/dtPyAppFramework"
Repository = "https://github.com/Digital-Thought/dtPyAppFramework"
Documentation = "https://dtpyappframework.readthedocs.io"

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["docs", "samples"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = ["src/dtPyAppFramework/_version.txt"]}